style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-image: url("./assets/image.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
    min-height: 100vh;
    font-family: 'Arial', sans-serif;
    position: fixed;
    height: 100%;
    width: 100%;
}

.wrapper {
    position: relative;
    overflow: auto;
    height: 100vh;
}

.overlay {
    position: fixed;
    inset: 0;
    background-color: rgba(0, 0, 0, 0.191);
    z-index: 1;
}

main,
section {
    position: relative;
    z-index: 2;
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: 30px;
    max-width: 1300px;
    width: 100%;
    margin: 0 auto;
    min-height: 100vh;
    padding: 20px;
}

section {
    display: block;
    min-height: fit-content;
    overflow-y: auto;
}

.main {
    z-index: 2;
    min-height: 100vh;
}

.main-header {
    background: linear-gradient(135deg, #249b55, #196b3b);
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    position: sticky;
    top: 0;
    z-index: 999;
}

.container {
    max-width: 1300px;
    margin: auto;
    padding: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo {
    color: white;
    font-size: 28px;
    font-weight: bold;
    letter-spacing: 2px;
}

.icon {
    display: flex;
    gap: 10px;
    align-items: center;
}

.icon img {
    aspect-ratio: 1/1;
    height: 50px;
    border-radius: 50%;
}

@media (max-width: 768px) {

    .container {
        padding: 12px 16px;
    }

    .logo {
        font-size: 20px;
    }

    .icon img {
        height: 40px;
        width: 40px;
    }

    .container {
        padding: 5px;
    }
}

/* mobile */
@media (max-width: 480px) {

    .container {
        justify-content: center;
        text-align: center;
    }

    .icon {
        flex-direction: column;
        gap: 6px;
    }

    .logo {
        font-size: 18px;
        letter-spacing: 0.5px;
    }

    .icon img {
        height: 38px;
        width: 38px;
    }

}

.nav-links {
    list-style: none;
    display: flex;
    gap: 25px;
}

.nav-links a {
    text-decoration: none;
    color: white;
    font-weight: 500;
    transition: opacity 0.3s ease;
}

.nav-links a:hover {
    opacity: 0.7;
}

.section {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.row {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
}

form {
    background-color: #FFFFFF;
    backdrop-filter: blur(10px);
    padding: 40px 30px;
    border-radius: 12px;
    display: flex;
    flex-direction: column;
    gap: 20px;
    height: fit-content;
}

form h2 {
    text-align: center;
    margin-bottom: 20px;
    color: #2200ff8e;
    font-size: xx-large;
}

.form-group {
    position: relative;
    flex: auto;
}

.form-group i {
    position: absolute;
    top: 50%;
    left: 14px;
    transform: translateY(-50%);
    font-size: 14px;
    color: #555;
    pointer-events: none;
}

input,
select,
textarea {
    width: 100%;
    padding: 12px 12px 12px 40px;
    border-radius: 8px;
    border: 1px solid #eee;
    font-size: 16px;
}

select {
    appearance: none;
}

button {
    padding: 14px;
    border: none;
    border-radius: 8px;
    background-color: #5a5fc4;
    font-size: 16px;
    cursor: pointer;
    transition: background-color 0.3s ease;
    color: white;
}

button:hover {
    background-color: #4348a1;
}

.form-info {
    display: flex;
    flex-direction: column;
    gap: 20px;
    background-color: #fff;
    height: min-content;
    border-radius: 12px;
    overflow: hidden;
}

.form-info img {
    max-width: 100%;
    height: auto;
}

.form-info-content {
    padding: 0 30px 30px 40px;
}

.form-info h3 {
    font-size: 24px;
    margin-top: 10px;
}

.info-text {
    font-size: 15px;
    line-height: 1.6;
    opacity: 0.9;
}

.info-features {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.feature {
    display: flex;
    align-items: center;
    gap: 10px;
    font-size: 15px;
}

.feature i {
    color: #2200ff8e;
    font-size: 18px;
}

.contact-info {
    margin-top: 15px;
    font-size: 14px;
    opacity: 0.9;
}

.contact-info i {
    margin-right: 8px;
    color: #2200ff8e;
}

.row-3 {
    grid-template-columns: 1fr 1fr 1fr;
    gap: 20px;
    display: grid;
}

@media (max-width: 900px) {
    main {
        grid-template-columns: 1fr;
        gap: 40px;
    }

    .row {
        grid-template-columns: 1fr;
    }

    .row-3 {
        grid-template-columns: 1fr;
    }

    form,
    .form-info {
        width: 100%;
    }
}

.section h5 {
    margin-top: 15px;
    font-size: 18px;
    border-bottom: 5px solid #2200ff8e;
    padding-bottom: 5px;
}

.radio-group label {
    margin-right: 15px;
    font-size: 16px;
    cursor: pointer;
}

.radio-group input[type="radio"] {
    margin-right: 5px;
}

.gender-class {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: flex-start;
    margin: 15px 0;
}

.gender-class label {
    display: flex;

}

.form-group input.error-input,
.form-group select.error-input {
    border-color: #ff4d4d;
}

.form-group input.success-input,
.form-group select.success-input {
    border-color: #2ecc71;
}

.error {
    color: red;
    font-size: 12px;
    display: block;
    margin-top: 5px;
}

input.error-border,
select.error-border {
    border: 1px solid red;
}

.college-add-container {
    display: flex;
    gap: 10px;
    width: 100%;
}

.info-table {
    width: 100%;
    border-collapse: collapse;
    overflow-x: auto;
}

.info-table th,
.info-table td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: center;
}

.info-table th {
    background-color: #2c3e50;
    color: white;
}

.info-table tr:nth-child(even) {
    background-color: #f2f2f2;
}

.toast {
    position: fixed;
    bottom: 30px;
    right: 30px;

    display: none;
    align-items: center;
    gap: 12px;

    background: white;
    padding: 14px 18px;

    border-radius: 10px;
    border-left: 4px solid #22c55e;

    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);

    min-width: 260px;

    opacity: 0;
    transform: translateY(30px);
    transition: all .35s ease;

    z-index: 999;
}

.toast.show {
    opacity: 1;
    transform: translateY(0);
    display: flex;
}

.toast-icon {
    width: 32px;
    height: 32px;

    display: flex;
    align-items: center;
    justify-content: center;

    background: #dcfce7;
    color: #16a34a;

    border-radius: 50%;
    font-weight: bold;
}

.toast-title {
    font-weight: 600;
    font-size: 14px;
    margin: 0;
}

.toast-message {
    font-size: 13px;
    color: #6b7280;
    margin: 2px 0 0 0;
}

#data-field {
    background-color: #fff;
    margin: 20px auto;
    border-radius: 10px;
    white-space: nowrap;
}

caption {
    color: #2c3e50;
    font-size: 25px;
    font-weight: 900;
    margin-bottom: 10px;
}

#floating-btn {
    position: fixed;
    bottom: 30px;
    right: 30px;
    background: #4348a1;
    color: #dcfce7;
    z-index: 999;
    padding: 10px;
    aspect-ratio: 1/1;
    border-radius: 50%;
    cursor: pointer;
}

#nodata {
    display: flex;
    justify-content: center;
    align-items: center;
    color: red;
    min-height: 100px;
    text-align: center;
    border: 1px solid red;
    border-top: 0;
    padding: 10px;
    background-color: #9ba3ab0c;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

